--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -85,17 +85,19 @@
 @media screen and (max-width: 700px){
     .mka__navbar {
         padding: 2rem 4rem;
+        margin-left: 16rem;
     }
 }
 
 @media screen and (max-width: 550px){
     .mka__navbar {
         padding: 2rem;
+        margin-left: 18rem;
         
     } 
 
     .mka__navbar-menu_container {
         top: 20px;
-        text-align: end;
+       
     }
 }
