--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,19 +1,50 @@
+.mka__div {
+    width: 100%;
+    top: 0;
+    border-bottom: 1px solid rgba(255,255,255,.2);
+    height: 50px;
+}
+
+.mka__container {
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    
+}
+
+@media screen and (min-width: 1200px){
+    .mka__container {
+       width: 1170px;
+    }
+}
+@media screen and ((min-width: 992px)){
+    .mka__container {
+        width: 970px;
+     }
+}
+
+@media screen and ((min-width: 768px)){
+    .mka__container {
+        height: 750px;
+    }
+}
+
 .mka__header {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
-    border-style: solid;
-    border-width: 0.5px;
-    border-color: #fff;
-
-    padding: 0.5rem 8rem ;
+    padding: 0.5rem 1rem ;
 }
 
 .mka__header-list {
     flex: 1;
     flex-direction: row;
     flex-wrap: wrap;
+    overflow-wrap: break-word;
     justify-content: start;
     align-items: center;
+    
     
 }
 
@@ -21,14 +52,23 @@
     color: #fff;
     list-style: none;
     display: flex;
-    padding: 0 1em;
+    padding: 0.2em;
+   
 }
 
 .mka__header-link {
     color: #fff;
+    
 }
 
 .mka__header-link p > a:hover {
     transition: 0.9s;
     color: #db2d2e;
 }
+
+.mka__icons {
+    height: 14px;
+    width: 19px;
+    padding-right: 5px;
+}
+
