--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,7 +9,7 @@
 .mka__navbar-links {
     flex: 1;
     display: flex;
-    justify-content: start;
+    justify-content: end;
     align-items: center;
 }
 
@@ -91,7 +91,7 @@
 
 @media screen and (max-width: 550px){
     .mka__navbar {
-        padding: 2rem;
+        padding: 2rem 1rem;
         margin-left: 18rem;
         
     } 
