--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
-    --font-family: font-family: Roboto, Arial, Helvetica, sans-serif;
+    --font-family: Roboto, sans-serif;
 
     --color-bg: #000000;
     --color-white: #fff;
     --color-grey: #abb8c3;
     --color-red: #cf2e2e;
 }
+
