--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -9,7 +9,7 @@
     display: flex;
     flex-wrap: wrap;
     align-items: center;
-    padding: 0.5rem 1rem ;
+    padding: 0.3rem 1rem ;
     justify-content: center;
 }
 
@@ -30,6 +30,7 @@
 .mka__header-link {
     color: #fff;
     font-family: var(--font-family);
+    font-size: min(22px, 14px);
 }
 
 .mka__header-link p > a:hover {
