--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,6 @@
 .mka__navbar {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-  
-    padding: 2rem  35rem;
+    padding: 2rem;
 }
 
 .mka__navbar-links {
@@ -16,7 +13,6 @@
 .mka__navbar-links_container {
     display: flex;
     flex-direction: row;
-    text-align: center;
 }
 
 .mka__navbar-links_container p,
@@ -42,7 +38,6 @@
 }
 
 .mka__navbar-menu {
-    margin-left: 5rem;
     display: none;
 
     
@@ -71,6 +66,12 @@
     margin: 1rem 0;
 }
 
+@media (min-width: 1200px){
+    .mka__navbar-links {
+        justify-content: center;
+    }
+}
+
 @media (max-width: 1200px){
     .mka__navbar-links_container {
         display: none;
@@ -81,28 +82,7 @@
         float: right;
     }
 
-    .mka__navbar {
-        padding: 2rem 1rem;
-        margin-left: 16rem;
-    }
+   
 }
 
-@media (max-width: 992px){
-    .mka__navbar {
-        padding: 2rem 1rem;
-        margin-left: 16rem;
-    }
-}
 
-@media (max-width: 768px){
-    .mka__navbar {
-        padding: 2rem 1rem;
-        margin-left: 18rem;
-        
-    } 
-
-    .mka__navbar-menu_container {
-        top: 20px;
-       
-    }
-}
