--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,51 @@
     --color-red: #cf2e2e;
 }
 
+h1 {
+    font-family: var(--font-family);
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 40px;
+    line-height: 50px;
+    letter-spacing: 0px;
+  }
+  h2 {
+    font-family: var(--font-family);
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 36px;
+    line-height: 46px;
+    letter-spacing: 0px;
+  }
+  h3 {
+    font-family: var(--font-family);
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 28px;
+    line-height: 42px;
+    letter-spacing: 0px;
+  }
+  h4 {
+    font-family: var(--font-family);
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 24px;
+    line-height: 36px;
+    letter-spacing: 0px;
+  }
+  h5 {
+    font-family: var(--font-family);
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 18px;
+    line-height: 30px;
+    letter-spacing: 0px;
+  }
+  h6 {
+    font-family: var(--font-family);
+    font-weight: 500;
+    text-transform: uppercase;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0px;
+  }
