--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,3 +1,4 @@
+ /* Navbar links */
 .mka__navbar {
     display: flex;
     padding: 2rem;
@@ -15,8 +16,7 @@
     flex-direction: row;
 }
 
-.mka__navbar-links_container p,
-.mka__navbar-menu_container p {
+.mka__navbar-links_container p {
     color: #fff;
     font-size: 14px;
     line-height: 66px;
@@ -42,39 +42,49 @@
     color: #db2d2e;
 }
 
+.mka__navbar-links_container p > a.active {
+    color: #db2d2e;
+}
+
+.mka__align-items {
+    display: flex;
+    justify-content: center;
+}
+
+ /* Hamburger menu */
 .mka__navbar-menu {
     display: none;
-
-    
     position: relative;
 }
 
-.mka__navbar-menu_container {
-    background-color: #0f1215;
-    position: absolute;
-    top: 40px;
-    right: 0;
-    margin-top: 0.5rem;
-    border-radius: 5px;
+.mka__navbar-menu_container-links {
+    color: #fff;
+    font-size: 14px;
+    line-height: 66px;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-family: var(--font-family);
+    transition: padding .25s linear;
+    padding: 0 0.5rem;
+    cursor: pointer;
+    width: 100%;
 }
 
-.mka__navbar-menu_container p {
-    margin: 1rem 0;
-}
-
+ /* Search */
 .mka__search-div {
     background: #0e0e0ed1;
     display: block;
-    margin-right: auto;
-    margin-right: auto;
     padding: 15px;
-    position: absolute;
-    right: 590px;
-    top: 150px;
     width: 327px;
     z-index: 888;
     border-radius: 0;
     border-top: 5px solid #db2d2e;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 26rem;
+    right: 0;
+    top: 9rem;
 }
 
 input {
@@ -85,6 +95,12 @@ input {
     width: 290px;
 }
 
+.mka__search_column {
+    display: flex;
+    flex-direction: column;
+}
+
+ /* Media Queries */
 @media (min-width: 992px){
     .mka__navbar-links {
         justify-content: center;
@@ -96,19 +112,22 @@ input {
         display: none;
     }
 
-    .dropdown {
-        display: none;
-    }
-
     .mka__navbar-menu {
         display: flex;
         float: right;
     }
 
     .mka__navbar-menu_container {
-        width: auto;
+        background-color: #0f1215;
+        position: absolute;
+        top: 40px;
+        right: 0;
+        width: 100%;
+        margin-top: 0.5rem;
+        border-radius: 5px;
+        margin-left: auto;
+        margin-right: auto;
     }
-   
 }
 
 @media (min-width: 1200px){
@@ -117,3 +136,8 @@ input {
     }
 }
 
+@media (max-width: 1200px){
+    .mka__search-div {
+        left: 21rem;
+    }
+}
