--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -6,14 +6,12 @@
 
 .mka__navbar-links {
     flex: 1;
-    display: flex;
-    justify-content: end;
-    align-items: center;
 }
 
 .mka__navbar-links_container {
     display: flex;
     flex-direction: row;
+    justify-content: center;
 }
 
 .mka__navbar-links_container p {
@@ -58,6 +56,15 @@
     padding: 0 1.5rem;
     cursor: pointer;
     width: 100%;
+}
+
+.mka__navbar-menu_container-links p > a:hover {
+    transition: 0.5s;
+    color: #db2d2e;
+}
+
+.mka__navbar-menu_container-links p > a.active {
+    color: #db2d2e;
 }
 
  /* Search */
@@ -108,20 +115,26 @@ input {
         display: none;
     }
 
+    .mka___hamburger-menu {
+       float: right;
+       margin-top: -17px;
+    }
+
     .mka__navbar-menu_container {
         background-color: #0f1215;
         width: 100%;
         margin-top: 0.5rem;
         border-radius: 5px;
+        position: relative;
     }
 
     .mka__navbar-menu-margins {
-        margin-left: auto;
+        margin-left: 0;
         margin-right: auto;
-        padding-left: 15px;
-        padding-right: 15px;
-        width: 100%;
-        margin-top: 40px;
+        margin-top: 30px;
+        position: absolute;
+        right: 27px;
+        left: 53px;
     }
 }
 
