--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -92,9 +92,12 @@ input {
     background: #0f1215;
     color: gray;
     padding: 12px;
-    width: 290px;
+    width: 297px;
 }
 
+.mka__search-input:focus {
+    border-color: #db2d2e;
+}
 .mka__search_column {
     display: flex;
     flex-direction: column;
@@ -111,10 +114,23 @@ input {
 }
 
 .io-close:hover {
-    transition: 1s;
+    transition: 0.5s;
     color: #db2d2e;
 }
 
+.fa-search {
+    position: absolute;
+    right: 26px;
+    top: 27px;
+    color: #626262;
+    cursor: pointer;
+    font-size: 15px;
+}
+
+.fa-search:hover {
+    transition: 0.5s;
+    color: #db2d2e;
+}
  /* Media Queries */
 @media (min-width: 992px){
     .mka__navbar-links {
