--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,9 @@
 
 :root {
     --font-family: Roboto, sans-serif;
+    height: 100vh;
+    width: 100%;
+    
 
     --color-bg: #000000;
     --color-white: #fff;
