--- a/src/components/Jumbotrone/Jumbotrone.css
+++ b/src/components/Jumbotrone/Jumbotrone.css
@@ -4,6 +4,7 @@
     background-attachment: fixed;
     background-position: center center;
     background-image: url('../../assets/Background.jpg');
+    margin-top: 50rem;
     
 }
 
