--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -17,7 +17,7 @@
     flex: 4 1;
 }
 
-.mka__header-list > ul,li {
+.mka__header-list,ul > li {
     color: #fff;
     list-style: none;
     display: inline-block;
