--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@ h1 {
     font-size: 40px;
     line-height: 50px;
     letter-spacing: 0px;
+    color: var(--color-white);
   }
   h2 {
     font-family: var(--font-family);
@@ -28,6 +29,7 @@ h1 {
     font-size: 36px;
     line-height: 46px;
     letter-spacing: 0px;
+    color: var(--color-white);
   }
   h3 {
     font-family: var(--font-family);
@@ -36,6 +38,7 @@ h1 {
     font-size: 28px;
     line-height: 42px;
     letter-spacing: 0px;
+    color: var(--color-white);
   }
   h4 {
     font-family: var(--font-family);
@@ -44,6 +47,7 @@ h1 {
     font-size: 24px;
     line-height: 36px;
     letter-spacing: 0px;
+    color: var(--color-white);
   }
   h5 {
     font-family: var(--font-family);
@@ -52,6 +56,7 @@ h1 {
     font-size: 18px;
     line-height: 30px;
     letter-spacing: 0px;
+    color: var(--color-white);
   }
   h6 {
     font-family: var(--font-family);
@@ -60,4 +65,5 @@ h1 {
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0px;
+    color: var(--color-white);
   }
