Just responsivnes left for the Financing page

--- a/src/components/Financing/Financing.css
+++ b/src/components/Financing/Financing.css
@@ -53,7 +53,7 @@
 
 .mka__wrapper-financing {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
-    height: 50rem;
+    height: 60rem;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -67,6 +67,27 @@
     padding-top: 32px;
 }
 
+.mka__logos-wrapper {
+    display: flex;
+    gap: 5rem;
+justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.mka__logos-santanderbank {
+    display: inline-block;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.mka__logos-santanderbank {
+    display: inline-block;
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 /*CSS for container and content responsivnes*/
 @media (min-width: 767px) {
