--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
     --font-family: Roboto, sans-serif;
     height: 100vh;
     width: 100%;
+    font-weight: 400;
+    text-transform: none;
     
 
     --color-bg: #000000;
