--- a/src/components/Financing/Financing.css
+++ b/src/components/Financing/Financing.css
@@ -51,7 +51,7 @@
     padding: 0;
 }
 
-.mka__wrapper-content {
+.mka__wrapper-financing {
     background-image: url(https://mkautomobile.at/wp-content/uploads/2021/04/dark.jpg);
     height:100%;
     background-position: center;
