--- a/src/components/ImageSlider/ImageSlider.css
+++ b/src/components/ImageSlider/ImageSlider.css
@@ -50,3 +50,63 @@
     background-color: white;
     z-index: 99;
   }
+
+  .btn-prv::before {
+    content: '';
+    left: 50px;
+    position: absolute;
+    top: 50%;
+    display: block;
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    transform: translate(0, -50%);
+    cursor: pointer;
+    background-color: white;
+    z-index: 99;
+  }
+
+  .btn-prv::after {
+    content: '';
+    left: -25px;
+    position: absolute;
+    top: 50%;
+    display: block;
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    transform: translate(0, -50%);
+    cursor: pointer;
+    background-color: red;
+    z-index: 99;
+  }
+
+  .btn-nxt::before {
+    content: '';
+    right: 50px;
+    position: absolute;
+    top: 50%;
+    display: block;
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    transform: translate(0, -50%);
+    cursor: pointer;
+    background-color: white;
+    z-index: 99;
+  }
+
+  .btn-nxt::after {
+    content: '';
+    right: -25px;
+    position: absolute;
+    top: 50%;
+    display: block;
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    transform: translate(0, -50%);
+    cursor: pointer;
+    background-color: red;
+    z-index: 99;
+  }
